# fnc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh  temp_test.rs
.github/workflows/: ci.yml  release.yml
changelog/: Cargo.toml
changelog/src/: config.rs  core.rs  diff.rs  error.rs  formatter.rs  lib.rs  parser.rs  position.rs  regex_utils.rs  reorganizer.rs  types.rs  utils.rs  version.rs
cli/: Cargo.toml
cli/src/: changelog.rs  cli.rs  deploy.rs  error.rs  http_diff.rs  main.rs  package_version.rs  progress.rs  sync_versions.rs  ui.rs  upgrade.rs
git/: Cargo.toml
git/src/: config.rs  error.rs  git.rs  repository.rs
http-diff/: Cargo.toml
http-diff/examples/: renderers.rs
http-diff/src/: client.rs  comparator.rs  config.rs  curl.rs  documentation.rs  error.rs  error_analysis.rs  formatter.rs  http.rs  lib.rs  output.rs  output_manager.rs  runner.rs  table_builder.rs  traits.rs  types.rs  url_builder.rs
http-diff/src/analysis/: error_classifier.rs  mod.rs
http-diff/src/comparison/: analyzer.rs  content.rs  mod.rs  response_validator.rs  validator.rs
http-diff/src/conditions/: evaluator.rs  mod.rs  types.rs
http-diff/src/config/: builder.rs  global_builder.rs  loader.rs  mod.rs  templates.rs  types.rs  validator.rs
http-diff/src/execution/: context.rs  dependency.rs  mod.rs  progress.rs  runner.rs
http-diff/src/extraction/: extractors.rs  mod.rs
http-diff/src/http/: client.rs  mod.rs  request_builder.rs  response_converter.rs
http-diff/src/renderers/: cli.rs  comparison_formatter.rs  diff_data.rs  diff_processor.rs  html.rs  json.rs  mod.rs
http-diff/src/renderers/cli/: comparison_formatter.rs  error_renderer.rs  mod.rs  renderer.rs  table.rs  text_formatter.rs
http-diff/src/renderers/report/: mod.rs
http-diff/src/renderers/report/html/: components.rs  diff_renderer.rs  json_diff_renderer.rs  mod.rs  templates.rs
http-diff/src/renderers/tui/: app.rs  diff_renderer.rs  diff_widgets.rs  events.rs  exec.rs  mod.rs  msg.rs  theme.rs  ui.rs  update.rs
http-diff/src/renderers/tui/events/: events_dashboard.rs
http-diff/src/renderers/tui/view/: config.rs  details.rs  mod.rs  progress.rs  results.rs
http-diff/src/testing/: mocks.rs  mod.rs
http-diff/src/utils/: diff.rs  environment_utils.rs  mod.rs  response_summary.rs  text.rs
http-diff/src/validation/: mod.rs  response_validator.rs
http-diff/templates/: html_styles.css
http-diff/tests/: chain_tests.rs  common.rs  conditional_execution_test.rs  integration_tests.rs  max_concurrent_tests.rs  performance_tests.rs  test_cli_integration_enhancements.rs  test_comparator_enhancements.rs  test_output_enhancements.rs  test_runner_enhancements.rs  unit_tests.rs
src/: cli.rs  error.rs  git.rs  interactive.rs  language.rs  main.rs  package.rs  ports.rs  progress.rs  semver.rs  vcs.rs
src/language/: common.rs  go.rs  javascript.rs  rust.rs
tests/: Cargo.toml  http_diff_integration.rs  integration_test.rs  test_cli_integration_enhancements.rs
tests/src/: lib.rs
version/: Cargo.toml
version/src/: ecosystems.rs  error.rs  lib.rs
