[dependencies]
anyhow = "1.0"
colored = "2.0"
dirs = "5.0"
glob = "0.3"
regex = "1.10.2"
semver = "1.0.26"
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"

[dependencies.changelog]
path = "../changelog"

[dependencies.clap]
features = ["derive"]
version = "4.5.32"

[dependencies.git]
path = "../git"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.version]
path = "../version"

[package]
edition = "2024"
name = "cli"
version = "0.1.9"

[[bin]]
name = "fnc"
path = "src/main.rs"
