[package]
name = "http-diff"
version = "0.1.0"
edition = "2021"
description = "HTTP request testing and comparison tool for multi-environment validation"
authors = ["FNC Team"]

[dependencies]
# HTTP client and async runtime
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }

# Configuration and data parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"

# Text diffing and URL handling
similar = { version = "2.0", features = ["text"] }
url = "2.5"

# Error handling and utilities
anyhow = "1.0"
thiserror = "2.0"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"

# Testing dependencies
[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.8" 