[package]
name = "version"
version = "0.1.0"
edition = "2024"

[dependencies]
semver = "1.0.26"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
path-clean = "1.0"
glob = "0.3"
regex = "1.10"
once_cell = "1.19"
